--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="http://d3js.org/topojson.v1.min.js"></script>
+    <script src="http://d3js.org/queue.v1.min.js"></script>
     <script type="text/javascript" src="lib/bundle.js"></script>
     <title></title>
   </head>
   <body>
-    <div id="root">
-
-    </div>
+    <canvas id="canvas"></canvas>
   </body>
 </html>
