--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <title></title>
   </head>
   <body>
-    <canvas id="canvas"></canvas>
+    <div id="canvas">
+      <canvas id="canvas"></canvas>
+    </div>
     <div id="root"></div>
   </body>
 </html>
