Functional donut with animated intro

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <title></title>
   </head>
   <body>
-    <div id="canvas">
-      <canvas id="canvas"></canvas>
-    </div>
-    <div id="root"></div>
+    <div id="canvas"><canvas></canvas></div>
+    <div id="svg"></div>
   </body>
 </html>
