--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://unpkg.com/topojson@3"></script>
     <script src="http://d3js.org/queue.v1.min.js"></script>
     <script type="text/javascript" src="lib/bundle.js"></script>
+    <link rel="stylesheet" href="css/master.css">
     <title></title>
   </head>
   <body>
