--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title></title>
   </head>
   <body>
-    <div id="canvas"><canvas></canvas></div>
+    <div id="canvas"></div>
     <div id="svg"></div>
   </body>
 </html>
