--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script type="text/javascript" src="lib/bundle.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/master.css">
     <title></title>
   </head>
   <body>
     <div id="canvas"></div>
     <div id="svg"></div>
+    <footer class="footer">
+      <ul class="footer-links">
+        <li><a href="https://zhuo-ch.github.io/" class="copyright"><span class="label">&copy; Zhuo Chen</span></a></li>
+        <li><a href="https://www.linkedin.com/in/zhuohchen/" class="fa fa-linkedin"> <span class="label">LinkedIn</span></a></li>
+        <li><a href="https://github.com/zhuo-ch/" class="fa fa-github"> <span class="label">GitHub</span></a></li>
+      </ul>
+    </footer>
   </body>
 </html>
