App entry from react.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script type="text/javascript" src="lib/bundle.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -10,6 +9,7 @@
     <link rel="stylesheet" href="css/master.css">
     <title></title>
   </head>
+  <div id="root"></div>
   <body>
     <div id="canvas"></div>
     <div id="svg"></div>
