--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <div id="root"></div>
   <body>
-    <div id="canvas"></div>
-    <div id="svg"></div>
+    <!-- <div id="canvas"></div>
+    <div id="svg"></div> -->
     <footer class="footer">
       <ul class="footer-links">
         <li><a href="https://zhuo-ch.github.io/" class="copyright"><span class="label">&copy; Zhuo Chen</span></a></li>
