--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <title></title>
   </head>
-  <div id="root"></div>
   <body>
-    <!-- <div id="canvas"></div>
-    <div id="svg"></div> -->
+    <div id="root"></div>
     <footer class="footer">
       <ul class="footer-links">
         <li><a href="https://zhuo-ch.github.io/" class="copyright"><span class="label">&copy; Zhuo Chen</span></a></li>
