Fix FA icons. Use css instead of native class for font-size.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/master.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <title></title>
   </head>
   <body>
@@ -15,8 +14,8 @@
     <footer class="footer">
       <ul class="footer-links">
         <li><a href="https://zhuo-ch.github.io/" class="copyright"><span class="label">&copy; Zhuo Chen</span></a></li>
-        <li><a href="https://www.linkedin.com/in/zhuohchen/" class="fa fa-linkedin"> <span class="label">LinkedIn</span></a></li>
-        <li><a href="https://github.com/zhuo-ch/" class="fa fa-github"> <span class="label">GitHub</span></a></li>
+        <li><a href="https://www.linkedin.com/in/zhuohchen/"><i class="fa fa-linkedin"></i> <span class="label">LinkedIn</span></a></li>
+        <li><a href="https://github.com/zhuo-ch/"><i class="fa fa-github" aria-hidden="true"></i> <span class="label">GitHub</span></a></li>
       </ul>
     </footer>
   </body>
